# metronome

./: .gitignore  CONTRIBUTING.md  README.md  SETUP_GITHUB.md  build.sh  generate_batch.py  generate_batch_organized.py  gui_app.py  metronome.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
src/metronome/: __init__.py  cli.py  core.py  gui.py  io.py
tests/: __init__.py  test_core.py
